Fix hrz scrollbar and free transform overlay lag

--- a/src/css/element-plus-enhancements.scss
+++ b/src/css/element-plus-enhancements.scss
@@ -328,7 +328,7 @@
         flex-direction: row;
         overflow: hidden;
         align-items: stretch;
-        height: 3.25rem;
+        height: 3.5rem;
 
         > .el-scrollbar {
             height: auto;
