--- a/src/css/main-light.scss
+++ b/src/css/main-light.scss
@@ -9,7 +9,7 @@
     --ogr-form-connected-label-border-color: #DCDFE6;
     --ogr-form-connected-label-input-hover-color: #f0f2f3;
     --ogr-form-connected-label-input-focus-color: #ffffff;
-    --ogr-layout-menu-bar-border-color: #eaeefb;
+    --ogr-layout-menu-bar-border-color: #dadeea;
     --ogr-layout-menu-bar-background-color: white;
     --ogr-menu-drawer-background-color: white;
     --ogr-menu-drawer-close-icon-color: #a4a8b3c4;
